# emendas-teste2

./: .buildinfo  README.md  analise.qmd  analise_exploratoria.html  analise_exploratoria.ipynb  emendas.csv  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: analise_exploratoria.ipynb
myfirstbook/: _config.yml  _toc.yml  analise_exploratoria.ipynb
myfirstbook/_build/.doctrees/: analise_exploratoria.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
myfirstbook/_build/html/: .buildinfo  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js
myfirstbook/_build/html/_sources/: analise_exploratoria.ipynb
myfirstbook/_build/jupyter_execute/: analise_exploratoria.ipynb  markdown-notebooks.ipynb  notebooks.ipynb
